Updated style.css to use simple block layout instead of flexbox to resolve h2 span overlap.

--- a/style.css
+++ b/style.css
@@ -28,12 +28,8 @@ div#resume h2 {
   font-size: 20px;
   margin: 0 0 6px 0;
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  gap: 20px;
-  min-height: 30px;
+  display: block;
+  line-height: 1.8;
 }
 
 div#resume h2 span {
@@ -45,8 +41,7 @@ div#resume h2 span {
   color: #999;
   font-weight: normal;
   text-align: right;
-  flex-shrink: 0;
-  min-width: fit-content;
+  margin-top: 4px;
 }
 
 div#resume p {
@@ -81,42 +76,41 @@ div#resume dt {
 }
 
 div#resume dl {
-  display: table-row;
+  display: block;
 }
 
 div#resume dl dt,
 div#resume dl dd {
-  display: table-cell;
+  display: block;
   padding-bottom: 20px;
 }
 
 div#resume dl dd {
-  width: 500px;
+  width: auto;
   padding-left: 26px;
 }
 
 div#resume img {
-  float: right;
+  display: block;
   padding: 10px;
   background: #fff;
-  margin: 0 30px;
+  margin: 0 auto;
   transform: rotate(-4deg);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
   width: 30%;
   max-width: 220px;
-  clear: right;
 }
 
 @media screen and (max-width: 1100px) {
   div#resume h2 {
     display: block;
-    min-height: auto;
+    line-height: 1.8;
   }
   
 div#resume h2 span {
     position: static;
     display: block;
-    margin-top: 2px;
+    margin-top: 4px;
     text-align: left;
   }
 }
@@ -136,8 +130,8 @@ div#resume h2 span {
     border-bottom: 1px solid #999;
   }
   div#resume dl,
-div#resume dl dd,
-div#resume dl dt {
+  div#resume dl dd,
+  div#resume dl dt {
     display: block;
     padding-left: 0;
     margin-left: 0;
@@ -153,9 +147,11 @@ div#resume dl dt {
     font-weight: 400;
     font-size: 18px;
     display: block;
+    line-height: 1.4;
   }
   div#resume h2 span {
     text-align: left;
+    margin-top: 4px;
   }
   div#resume dt {
     font-size: 20px;
